--- a/public/views/projects.html
+++ b/public/views/projects.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
+
 <head>
-    <link rel="stylesheet" type="text/css" href="../css/style.css">
-    <link rel="stylesheet" type="text/css" href="../css/projects.css">
+    <link rel="stylesheet" type="text/css" href="public/css/style.css">
+    <link rel="stylesheet" type="text/css" href="public/css/projects.css">
 
     <script src="https://kit.fontawesome.com/723297a893.js" crossorigin="anonymous"></script>
     <title>PROJECTS</title>
@@ -10,7 +11,7 @@
 <body>
     <div class="base-container">
         <nav>
-            <img src="../img/logo.svg">
+            <img src="public/img/logo.svg">
             <ul>
                 <li>
                     <i class="fas fa-project-diagram"></i>
@@ -38,13 +39,12 @@
                     </form>
                 </div>
                 <div class="add-project">
-                    <i class="fas fa-plus"></i>
-                    add project
+                    <i class="fas fa-plus"></i> add project
                 </div>
             </header>
             <section class="projects">
                 <div id="project-1">
-                    <img src="../img/uploads/project_smile.jpg">
+                    <img src="public/img/uploads/project_smile.jpg">
                     <div>
                         <h2>title</h2>
                         <p>description</p>
@@ -54,9 +54,6 @@
                         </div>
                     </div>
                 </div>
-                <div>project 2</div>
-                <div>project 3</div>
-                <div>project 4</div>
             </section>
         </main>
     </div>
