--- a/public/css/style.css
+++ b/public/css/style.css
@@ -45,7 +45,8 @@ button {
     line-height: 2.5em;
 }
 
-input {
+input,
+textarea {
     background-color: transparent;
     border: none;
     border-bottom: 1px solid gray;
