--- a/public/css/style.css
+++ b/public/css/style.css
@@ -21,7 +21,7 @@ body {
     width: 50%;
 }
 
-form.login {
+form.login, form.register {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -32,6 +32,10 @@ form.login {
     box-shadow: 0px 6px 6px #00000029;
     border: 1px solid #707070;
     border-radius: 33px;
+}
+
+form.register {
+    height: fit-content;
 }
 
 button {
