--- a/public/css/style.css
+++ b/public/css/style.css
@@ -63,16 +63,20 @@ textarea {
     .container {
         flex-direction: column;
     }
+
     * {
         font-size: 36px;
     }
+
     .login-container,
     .logo {
         width: 100%;
     }
+
     form {
         margin: auto;
     }
+
     img {
         height: 7em;
         margin: 2em;
@@ -102,7 +106,7 @@ nav {
     justify-content: flex-start;
 }
 
-nav>img {
+nav > img {
     width: 60%;
     margin: 2em auto;
 }
@@ -175,7 +179,7 @@ header {
     width: 20%;
 }
 
-.add-project>i {
+.add-project > i {
     padding: 1em 1em;
 }
 
@@ -183,7 +187,7 @@ header {
     width: 70%;
 }
 
-.search-bar>form>input {
+.search-bar > input {
     background: #FFFFFF 0% 0% no-repeat padding-box;
     box-shadow: 0px 3px 6px #00000029;
     border: 1px solid #707070;
